--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,7 +6,7 @@
 # Appearance
 appearance:
   mode: system
-  color: teal
+  color: zinc
 
 # SEO
 marketing:
@@ -40,7 +40,7 @@ header:
 # Site footer
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: '© {year} Gabriel Bonnin. This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
