--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,14 +8,11 @@ main:
     url: /
     weight: 10
   - name: Publications
-    url: /#Recent Publications
-    weight: 11
-  - name: Presentations
-    url: /#talks
-    weight: 12
+    url: /Publication
+    weight: 20
   - name: Experience
     url: experience/
-    weight: 20
+    weight: 30
   - name: Projects
     url: projects/
-    weight: 30
+    weight: 40
