--- a/.github/workflows/update-publications.yml
+++ b/.github/workflows/update-publications.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 0 * * 0'  # weekly on Sunday
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   update-publications:
     runs-on: ubuntu-latest
